--- a/ins-001/web/src/pages/ins-001/ins-001-1/index.astro
+++ b/ins-001/web/src/pages/ins-001/ins-001-1/index.astro
@@ -1,12 +1,12 @@
 ---
 /**
- * INS-001.1 Semantic Radiation - Main Game Entry Page
+ * INS-001.1 Signal - Main Game Entry Page
  */
 
 import InstrumentLayout from '../../../layouts/InstrumentLayout.astro';
 import Game from '../../../components/Game';
 ---
 
-<InstrumentLayout id="INS-001.1" title="SEMANTIC RADIATION" version="0.1" status="live">
+<InstrumentLayout id="INS-001.1" title="SIGNAL" version="0.1" status="live">
   <Game client:load />
 </InstrumentLayout>
