--- a/ins-001/web/src/pages/ins-001/ins-001-2/join/[shareCode].astro
+++ b/ins-001/web/src/pages/ins-001/ins-001-2/join/[shareCode].astro
@@ -14,6 +14,6 @@ import JoinBridgingGame from '../../../../components/bridging/JoinBridgingGame';
 const { shareCode } = Astro.params;
 ---
 
-<InstrumentLayout id="INS-001.2" title="SEMANTIC BRIDGING" version="0.1" status="live">
+<InstrumentLayout id="INS-001.2" title="COMMON GROUND" version="0.1" status="live">
   <JoinBridgingGame shareCode={shareCode || ''} client:load />
 </InstrumentLayout>
