Update results screen

--- a/ins-001/web/src/pages/ins-001/ins-001-1/join/[token].astro
+++ b/ins-001/web/src/pages/ins-001/ins-001-1/join/[token].astro
@@ -14,6 +14,6 @@ import JoinGame from '../../../../components/JoinGame';
 const { token } = Astro.params;
 ---
 
-<InstrumentLayout id="INS-001.1" title="SEMANTIC RADIATION" version="0.1" status="live">
+<InstrumentLayout id="INS-001.1" title="SIGNAL" version="0.1" status="live">
   <JoinGame token={token || ''} client:load />
 </InstrumentLayout>
