--- a/ins-001/web/src/pages/ins-001/ins-001-2/index.astro
+++ b/ins-001/web/src/pages/ins-001/ins-001-2/index.astro
@@ -7,6 +7,14 @@ import InstrumentLayout from '../../../layouts/InstrumentLayout.astro';
 import BridgingGame from '../../../components/bridging/BridgingGame';
 ---
 
-<InstrumentLayout id="INS-001.2" title="COMMON GROUND" version="0.1" status="live">
+<InstrumentLayout
+  id="INS-001.2"
+  title="COMMON GROUND"
+  version="0.1"
+  status="live"
+  description="Name concepts that belong to both anchor and target. Common Ground measures your ability to locate semantic intersection across distant concepts."
+  keywords="common ground, semantic intersection, conceptual bridging, cognitive assessment, Phronos instruments, semantic space navigation"
+  canonicalPath="/ins-001/ins-001-2/"
+>
   <BridgingGame client:load />
 </InstrumentLayout>
