--- a/ins-001/web/src/components/landing/LandingNav.astro
+++ b/ins-001/web/src/components/landing/LandingNav.astro
@@ -16,7 +16,7 @@ import { NavAuthButton } from '../auth/NavAuthButton';
 
   <ul class="nav-links">
     <li><a href="https://phronos.org/dispatches" class="nav-link">Dispatches</a></li>
-    <li><span class="nav-link nav-link-disabled">Library</span></li>
+    <li><a href="https://phronos.org/library/" class="nav-link">Library</a></li>
     <li><a href="https://phronos.org/methods" class="nav-link">Methods</a></li>
     <li><a href="/" class="nav-link nav-link-active">Instruments</a></li>
   </ul>
@@ -42,10 +42,7 @@ import { NavAuthButton } from '../auth/NavAuthButton';
 
   <div class="nav-mobile-links">
     <a href="https://phronos.org/dispatches" class="nav-mobile-link">Dispatches</a>
-    <span class="nav-mobile-link nav-mobile-link-disabled">
-      Library
-      <span class="soon-label">(soon)</span>
-    </span>
+    <a href="https://phronos.org/library/" class="nav-mobile-link">Library</a>
     <a href="https://phronos.org/methods" class="nav-mobile-link">Methods</a>
     <a href="/" class="nav-mobile-link nav-mobile-link-active">Instruments</a>
   </div>
